# am_msgs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  configure  package.xml
.github/workflows/: docs.yml  nightly.yml  package.yml  pr-updater.yml  release.yml  story.yml
action/: Land.action  RTL.action  WaypointNavigation.action
brain_box_msgs/: CMakeLists.txt  CMakeLists_org.txt  package.xml  package_org.xml
brain_box_msgs/action/: CheckForObjects.action  GlobalPositionNavigation.action  Launch.action  LocalPositionNavigation.action  VxFlightExec.action  WaypointNavigation.action
brain_box_msgs/msg/: AMMap.msg  AmPilotState.msg  AprilTagDetection.msg  AprilTagDetectionArray.msg  AutosteerMotorReport.msg  BBGlobalPosition.msg  BBLatency.msg  BBVxCommand.msg  BabySitterStatus.msg  BeaconRangeMsg.msg  BlinkMCommand.msg  BoundingBox.msg  BoundingBoxes.msg  C2Status.msg  CeilingHist.msg  CeilingPC2.msg  CeilingStatus.msg  Collision.msg  CollisionView.msg  CollisionViews.msg  CommsStatus.msg  ControlVariables.msg  ControllerState.msg  CorrFrontHist.msg  CorrSidesHist.msg  CorrSidesYawList.msg  CorrStatus.msg  DelayStats.msg  DepthCmnd.msg  DepthStatus.msg  EdgeHist.msg  EdgeStatus.msg  FTPCmnd.msg  FeatureStatus.msg  FeatureStatusList.msg  FeatureStatusPose.msg  FlightSegment.msg  FlightSegmentStatus.msg  FlightSegments.msg  GISEntity.msg  (+111 more)
brain_box_msgs/srv/: AnalyzeSingleImage.srv  AutosteerMotorStatusQuery.srv  CameraSelect.srv  DjiCameraSelectMulti.srv  RetrieveRows.srv  SegmentSearch.srv  VelocityControl.srv  VxFlightPlan.srv  VxMissionExec.srv  WorldFeatureUpdate.srv  WorldFeatures.srv
debian/: changelog  control  rules
msg/: AMMap.msg  BBVxCommand.msg  CRUD.msg  CeilingHist.msg  CeilingStatus.msg  CommsStatus.msg  ControlVariables.msg  CorrSidesHist.msg  CorrSidesYawList.msg  DepthCmnd.msg  EdgeStatus.msg  FTPCmnd.msg  FeatureStatus.msg  FeatureStatusList.msg  GISEntity.msg  GSMSDKStatus.msg  GSPNStatus.msg  Gimbal.msg  Latency.msg  Latency_LaserScan.msg  Latency_PointCloud.msg  Latency_PoseStamped.msg  Latency_PoseWithCovarianceStamped.msg  Latency_TwistStamped.msg  LocationSource.msg  LogControl.msg  MarkDetectStatus.msg  MarkerConfig.msg  MaxMinAve.msg  PIDParam.msg  PanelHist.msg  RGB.msg  Range.msg  RangeBall.msg  StampedAltimeter.msg  SuperStatus.msg  VideoStatus.msg  VisLogStatus.msg  VisionCmnd.msg  VxFCUStatus.msg  (+5 more)
srv/: AMMapBoundingBoxQuery.srv  DjiCameraSelect.srv  GetAMMap.srv  VxMissionExec.srv
